--- a/Mods ChoGGi/RC Tanker/todo.txt
+++ b/Mods ChoGGi/RC Tanker/todo.txt
@@ -1,3 +1,6 @@
+Good mod, it fulfills the purpose for which it was created. Basically I have only used it to fill a tank connected to an 'Artificial Sun', although if I could feed it directly it would be fabulous. Another thing that would be nice would be if it could extract the water directly from a reservoir without the need for 'water extractors' or 'tanks'. 
+
+
 add automated mode
 
 direct from water deposits
