Lib: - Added CycleSelectedObjects()
Omega Unlocks All Slowly 0.6:
Added mod option for random chance of receiving breakthrough (0 to disable).

RC Garage 1.0:
Added a collect idle rovers toggle to garage.
This will ignore rovers with deployed drones or with auto mode on.

Rocket Next Rocket Button:
A button to quickly loop through your rockets.

Triboelectric Sensor Tower 0.6:
It was adding dupe sliders (thanks spectrospork242).

github@choggi.org

--- a/Mods ChoGGi/Omega Unlocks All Slowly/changes.txt
+++ b/Mods ChoGGi/Omega Unlocks All Slowly/changes.txt
@@ -1,3 +1,6 @@
+v0.6
+Added mod option for random chance of receiving breakthrough (0 to disable).
+
 v0.5
 Added mod option to disable notification.
 Added Sols remaining to the Research tooltip in the Infobar.
