--- a/Mods ChoGGi/Autonomous Drones/changes.txt
+++ b/Mods ChoGGi/Autonomous Drones/changes.txt
@@ -1,3 +1,7 @@
+v0.4
+Early game mod option to evenly split drones across all controllers.
+Tweaked how drones are assigned (hopefully reduces the 0 drones hub).
+
 v0.3
 Mod options to choose which controllers to use for assignment.
 
