Expanded Cheat Menu:
Autonomous Drones 0.6:
New mod option Ignore Unused Hubs.
Fixed issue with single hubs.
Extra prefabs left over will be used at low load hubs.
Turning off Randomise Hub List will sort drones by load.
Drone Work Delay: How many "seconds" to wait before forcing the busy drone (0 to disable and wait).

Colonist Half Debuff For Unprepared Meal With Kitchen 0.3:
Log spam (didn't check if the colonist is valid).

Show Amount Per Rare On Rockets 0.4:
Changed text to round and multiply.

github@choggi.org

--- a/Mods ChoGGi/Autonomous Drones/changes.txt
+++ b/Mods ChoGGi/Autonomous Drones/changes.txt
@@ -1,3 +1,10 @@
+v0.6
+New mod option Ignore Unused Hubs.
+Fixed issue with single hubs.
+Extra prefabs left over will be used at low load hubs.
+Turning off Randomise Hub List will sort drones by load.
+Drone Work Delay: How many "seconds" to wait before forcing the busy drone (0 to disable and wait).
+
 v0.5
 UseDronePrefab() doesn't check if you have prefabs.
 
