--- a/Mods ChoGGi/Dome Show Connected Objects/changes.txt
+++ b/Mods ChoGGi/Dome Show Connected Objects/changes.txt
@@ -1,3 +1,7 @@
+v0.4
+Added mod option to move stuff at invalid positions to the dome.
+prints name of obj/dome in log when obj is moved/removed.
+
 v0.3
 Added mod option to clean up invalid objects in a dome.
 
