Expanded Cheat Menu: ### Changed: - Selection panel>Cheats>Examine is now an egg.
Mods:

All Animals In Pastures 0.6:
Log spam.

Change Lightmodel:
If you don't want the oversaturated look to the map when you terraform far enough (or if you always want it).

ChoGGi Construction Layouts:
A bunch of construction layouts:

A repeatable arrow of Stirlings + Tribby (Infrastructure).
A service slice of Infirmary, Diner, and Grocer (Dome Services).

Enable Console 0.6:
Disable mod when ECM is enabled.

Infobar More Info 2.1:
Added mod option to stop showing N/A when production is above consumption.

Remove SupplyPod Limit 0.2:
Any drones over 10 were ignored.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,5 @@
 "ID", " Text"
-302535920000887,
+302535920001066,
 302535920001451,
 302535920001463,
 302535920001464,
@@ -1651,8 +1651,13 @@ Not noticeable unless using higher zoom."
 302535920000654, "Select (or mouse over) an object to follow."
 302535920000655, "Toggle Cursor"
 302535920000656, "Toggle between moving camera and selecting objects."
-302535920000990, "(PC)"
-302535920001066, "(Console)"
+302535920000990, "You need to have a mouse to use this mod."
+302535920000887, "If you have any issues with this mod please send me a bug report instead of reporting the mod.
+You can contact me through:
+Github: https://github.com/ChoGGi/SurvivingMars_CheatMods
+Discord: ChoGGi#9210
+Steam: https://steamcommunity.com/id/ChoGGi/
+email: SurvivingMarsMods@choggi.org"
 302535920000221, "See log for any batch errors."
 302535920001572, "<color ChoGGi_red>Pack Warning</color>: Will instantly crash SM when calling it a second time, pack the mod manually to workaround it.
 You can also stick the executable in the profile folder to use it instead (<green>no crashing</green>):
