--- a/Mods ChoGGi/Fix Missing Mod Icons/changes.txt
+++ b/Mods ChoGGi/Fix Missing Mod Icons/changes.txt
@@ -1,3 +1,6 @@
+v0.6
+Slight optimize.
+
 v0.5
 Forgot to fix ClassTemplates.Building (pinned/upgrade icons).
 Also works with unpacked mods as well.
