--- a/Mods ChoGGi/POI Spawn Rate/changes.txt
+++ b/Mods ChoGGi/POI Spawn Rate/changes.txt
@@ -1,3 +1,6 @@
+v0.5
+I didn't test the code properly (thanks PaganoCristo).
+
 v0.4
 Changed code to make sure min is always equal to or lower than max.
 
