Expanded Cheat Menu: ### Changed: - Made funcs use either mouse or gamepad for positions.
### Fixed:
- Cheats pane>AddDust: Removed some dupes.

Lib:
- Made funcs use either mouse or gamepad for positions.

Autonomous Drones 0.9:
A very stupid bug... (prefabs work now)

Disable Annoying Sounds 0.5:
Seeker and Sensor rovers
Rare Metals Extractor
Select Building Sound
Biorobotics Workshop
Research Complete
Cold Wave Crackling

Disable Mouse 0.4:
Every in-game hour hide the mouse.

Fix Rocket Stuck 1.8:
Trade rockets stuck in orbit?

MDS Laser Cheats:
Pew pew pew!

Passages Use Empty Hexes 0.7:
Uneven ground may leave you with half a passage you can't remove.
There's now a loadgame cehck to remove them.

Remove Landscaping Limit 0.6:
Mod option to landscape out of bounds.

Now uses either mouse or gamepad for positions:
Click To Move Camera
Construction Show Dome Passage Line
Defence Towers Attack DustDevils
Drones Harvest Rocks
Minimap
Mononoke Shishigami
Multi-Select
Personal Shuttles
RC Remote
Salvage Vegetation
Spice Harvester

github@choggi.org

--- a/Mods ChoGGi/Disable Annoying Sounds/changes.txt
+++ b/Mods ChoGGi/Disable Annoying Sounds/changes.txt
@@ -1,3 +1,11 @@
+v0.5
+Seeker and Sensor rovers
+Rare Metals Extractor
+Select Building Sound
+Biorobotics Workshop
+Research Complete
+Cold Wave Crackling
+
 v0.4
 Some idiot forgot to add the library mod req for this mod...
 
