--- a/Mods ChoGGi/Disable Annoying Sounds/todo.txt
+++ b/Mods ChoGGi/Disable Annoying Sounds/todo.txt
@@ -1,12 +1,3 @@
-geyser sound effect!
+geyser sound effect
+(need map)
  
-RC Seeker 
-cold wave sounds
-
-biorobotics workshop
-
-the BROORP from every production and service building
-
-lady telling you research is done
-
-Rare Metals Extractor
