--- a/Mods ChoGGi/Passages Use Empty Hexes/changes.txt
+++ b/Mods ChoGGi/Passages Use Empty Hexes/changes.txt
@@ -1,3 +1,7 @@
+v0.7
+Uneven ground may leave you with half a passage you can't remove.
+There's now a loadgame cehck to remove them.
+
 v0.6
 Cleaned up the text.
 
