Expanded Cheat Menu: ### Added: - Cheats pane>DroneFactory/Control:SpawnAndroid/Drone: Instant spawn. - More stuff in Console>Examine>*.
### Removed:
- Build On Geysers/Delete Geysers: Moved to Dust Geyser Allow Building mod.

Lib:
- Added SetChoGGiPalette, IsGamepadButtonPressed.
- DeleteObject tries to delete domes the first time instead of making you do two passes with a confusing msg.

Mods:

Construction Show Drone Grid 1.8:
Log spam.

Cycle Skin All Buildings 0.2:
Right-click (gamepad Y?) to randomly colour the skin.

Disable Mouse 0.5:
Every in-game hour set the mouse to mod option.

Disable Select Zoom:
Normally when you select something it'll zoom the camera to that location (ex: from infobar or workplace).
This will disable that; hold down Ctrl when you want to zoom.

Dust Geyser Allow Building:
Any dust geysers on your map will be treated as regular ground (mostly), cables/pipes/passages are still blocked.

github@choggi.org

--- a/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
+++ b/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
@@ -1,3 +1,7 @@
+v0.5
+Tito again (cold areas changed a bit).
+Mod options added: Unbreakable Cables/Pipes, and Give Subsurface Heaters.
+
 v0.4
 Tito.
 
