--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,8 @@
 "ID", " Text"
-302535920001466,
-302535920001577,
+302535920000064,
+302535920000065,
+302535920000981,
+302535920000983,
 302535920001628,
 302535920001629,
 302535920001630,
@@ -145,6 +147,8 @@
 302535920000854, "Results Found"
 302535920000219, "Export viewed image to <green>%s</green>."
 302535920000109, "Invalid Image"
+302535920001577, "Spawn an Android."
+302535920001466, "Spawn a drone."
 302535920001464, "Leave a trail of rudimentary orbs."
 302535920001463, "Fill all depots of same type."
 302535920000929, "Tell drone to go back to controller."
@@ -642,8 +646,6 @@ Fix with: %s"
 302535920001408, "Allow you to rotate all buildings."
 302535920001398, "Remove Sponsor Limits"
 302535920001399, "Allow you to build all buildings no matter your sponsor."
-302535920000064, "Build On Geysers"
-302535920000065, "Allows you to build on geysers. Use <green>%s</green> around the area to delete the geyser objects (about 10-20 depending on size)."
 302535920001367, "Toggles"
 302535920001344, "Points To Train"
 302535920001345, "How many points are needed to finish training."
@@ -793,9 +795,6 @@ Use with <green>%s</green> to fill up a dome with spires."
 See also %s."
 302535920001087, "Missile Strike"
 302535920001086, "Meteor Strike"
-302535920000981, "Delete Geysers"
-302535920000983, "Remove all geyser activity from the map (permanent per-save).
-You will not be able to build on the area without also enabling <green>ECM>Buildings>Toggles>%s</green>."
 302535920000840, "All colonists spawn as this age."
 302535920000931, "Spawn POIs"
 302535920000934, "POI"
