--- a/Mods ChoGGi/Disable Maintenance When Off/changes.txt
+++ b/Mods ChoGGi/Disable Maintenance When Off/changes.txt
@@ -1,3 +1,6 @@
+v0.6
+Reverted, use SkiRich's fix mod.
+
 v0.5
 Fix for buildings stick in requiring maintenance after turning back on from a long time off.
 Thank you SkiRich
