--- a/Mods ChoGGi/Rocket Cheats/changes.txt
+++ b/Mods ChoGGi/Rocket Cheats/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Added option for Max Export Storage.
+
 v0.3
 Removed step size from CargoCapacity so 100k isn't the minimum cargo.
 Changed the max for CargoCapacity to be 1000.
