Expanded Cheat Menu: ### Changed: - Menu>ECM>Rockets>Travel Time: Now applies to expedition rockets as well.
Lib:
- ExportMapDataToCSV has option to return data in tables instead of csv.

Mods:

Artificial Sun Range 0.8:
Messed up panels last update.

Fix Colonist Daily Interest Loop:
A colonist will repeatedly use a daily interest building to satisfy a daily interest already satisfied.
Repeating a daily interest will gain a comfort boost "if" colonist comfort is below the service comfort threshold, but a resource will always be consumed each visit.
An unemployed scientist will wander around outside till the Sol is over instead of chewing up 0.6 electronics.

Map Overview More Info 0.7:
Added indicator for dropped resource piles.

Remove Unwanted Colonists 1.2:
Maybe fixed gray cube as pod.
Made idiot monument fit into one hex and not float (I can add old style as mod option if wanted).

Tourists Remove Specs 0.2:
Added check for Automated Tourism.

Triboelectric Scrubbers Clean Dome Buildings 0.4:
Safari constant malfunctions (thanks boneys26).

github@choggi.org

--- a/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
+++ b/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
@@ -1,3 +1,7 @@
+v1.2
+Maybe fixed gray cube as pod.
+Made idiot monument fit into one hex and not float (I can add old style as mod option if wanted).
+
 v1.1
 Added mod option to never remove tourists.
 
