--- a/Mods ChoGGi/Construction Show Max Radius Range/changes.txt
+++ b/Mods ChoGGi/Construction Show Max Radius Range/changes.txt
@@ -1,3 +1,6 @@
+v1.1
+Core Heat Convector was using too small of an area with max radius mod option (thanks Thor).
+
 v1.0
 Added my Triboelectric Sensor Tower.
 
