Lib: - Sorts list of mods in Options>Mod Options.
Mods:

Find Map Locations 0.6:
Added coordinates to map data for easier searching.

github@choggi.org

--- a/Mods ChoGGi/Find Map Locations/changes.txt
+++ b/Mods ChoGGi/Find Map Locations/changes.txt
@@ -1,3 +1,6 @@
+v0.6
+Added coordinates to map data for easier searching.
+
 v0.5
 Added input for ignoring text.
 Finding maps is faster (slightly slower initial load).
