--- a/Mods ChoGGi/Canadian Space Agency 2/changes.txt
+++ b/Mods ChoGGi/Canadian Space Agency 2/changes.txt
@@ -1,3 +1,8 @@
+v0.3
+Commander profile Diplomat.
+Only uses Dragon Rocket/Flying Drones if Space Race DLC installed.
+Different audio.
+
 v0.2
 Changed Welcome to Mars audio.
 Added some mission goals.
