--- a/Mods ChoGGi/Unlock Breakthroughs/changes.txt
+++ b/Mods ChoGGi/Unlock Breakthroughs/changes.txt
@@ -1,3 +1,7 @@
+v0.4
+Added delay for always apply on new games to stop buildings sinking into ground (thanks BluePuppet60).
+https://github.com/ChoGGi/SurvivingMars_CheatMods/issues/36
+
 v0.3
 Name icons.
 
