Expanded Cheat Menu:
- Added a note to paradox uploads for disabled content restrictions bull-diddy.

Mods:

All Sponsor Buildings 0.6:
Locked behind appropriate tech.

Fix Rocket Stuck 1.9:
Previous expedition rocket shows msg it isn't landed when trying to launch.

Infobar More Info 2.5:
Added warning for deposit remaining amount.
Added outsourcing remaining time.
Show idle research when nothing queued.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1653,7 +1653,9 @@ Not noticeable unless using higher zoom."
 302535920000656, "Toggle between moving camera and selecting objects."
 302535920001634, "This mod requires my lib mod (ChoGGi's Library)."
 302535920000990, "You need to have a mouse to use this mod."
-302535920000887, "If you have any issues with this mod please send me a bug report instead of reporting the mod.
+302535920000887, "If you get a disabled content restrictions error: It's on Paradox to review/restore it (bug them not me).
+
+If you have any issues with this mod please send me a bug report instead of reporting the mod.
 You can contact me through:
 Github: https://github.com/ChoGGi/SurvivingMars_CheatMods
 Discord: https://discord.gg/bkdjEZU
