--- a/Mods ChoGGi/Infobar More Info/todo.txt
+++ b/Mods ChoGGi/Infobar More Info/todo.txt
@@ -1,3 +1,1 @@
-add remaining sols for outsourcing
-
-add tooltip to grid info to show grid colours
+figure out that food info request and where I bookmarked it
