Expanded Cheat Menu:
### Fixed:
- Possible fix for Flatten ground ignoring soil quality (#38).

Mods:

1 Percenter 0.4:
Limited amount to 80 000 000 000 M, so it doesn't go negative.

Build Philosopher Stones:
Lets you build Philosopher Stones (no guarantees about bugs, and definitely some log spam).


Custom Resource Icon Toggle:
Mod options to selectivly toggle resource/effect icons (pressing "I" will reset it, re-apply mod options).

Fix Flying Drones MidAir Malfunction:
Flying drones that malfunction mid-air are stuck "flying".

github@choggi.org

--- a/Mods ChoGGi/1 Percenter/changes.txt
+++ b/Mods ChoGGi/1 Percenter/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Limited amount to 80 000 000 000 M, so it doesn't go negative.
+
 v0.3
 Changed notifaction to work with my notifaction disable mod.
 Amount rounded to not use decimals (looks weird when looking at money).
