Expanded Cheat Menu: ### Fixed: - Slider on drone hub / rover range goes up to the max amount.
Lib:
- Added mod option to ignore persist errors.
- Added SetPropertyProp

Mods:

1 Percenter 0.5:
Missed a <

ChoGGi Decorations:
Does nothing, looks pretty.

Drone Hub Range:
Change range of drone hubs.

Unit Thoughts 0.6:
Force clear lines didn't actually do anything...

github@choggi.org

--- a/Mods ChoGGi/1 Percenter/changes.txt
+++ b/Mods ChoGGi/1 Percenter/changes.txt
@@ -1,5 +1,8 @@
+v0.5
+Missed a <
+
 v0.4
-Limited amount to 80 000 000 000 M, so it doesn't go negative.
+Limited amount to 1000000000000 M, so it doesn't go negative.
 
 v0.3
 Changed notifaction to work with my notifaction disable mod.
