--- a/Mods ChoGGi/Infobar More Info/changes.txt
+++ b/Mods ChoGGi/Infobar More Info/changes.txt
@@ -1,3 +1,7 @@
+v2.6
+Fixed remaining resource msg.
+Game pauses when msg displayed.
+
 v2.5
 Added warning for deposit remaining amount.
 Added outsourcing remaining time.
