--- a/Mods ChoGGi/Mars Companion/todo.txt
+++ b/Mods ChoGGi/Mars Companion/todo.txt
@@ -1,4 +1,4 @@
-set hover ehight, plant green and trees like monkohime
+set hover ehight, plant green and trees like monkohime?
 less x/y area
 use parabol func to make smooth turns
 
