--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 "ID", " Text"
-302535920001635,
-302535920001636,
 302535920001637,
 302535920001638,
 302535920001639,
@@ -370,10 +368,12 @@ If this isn't a dumping site then waste rock will not be emptied."
 302535920001301, "Edit Text"
 302535920000721, "Overwrite"
 302535920000827, "Check this to overwrite file instead of appending to it."
-302535920001342, "Dumps the log to disk on startup, and every new Sol (good for some crashes)."
+302535920001635, "Flush Log Hourly"
+302535920001636, "Call FlushLogFile() every in-game hour."
 302535920001349, "Flush Log Constantly"
 302535920001414, "Call FlushLogFile() every render update!"
 302535920000473, "Flush Log"
+302535920001342, "Dumps the log to disk on startup, and every new Sol."
 302535920000474, "Flushes log to file."
 302535920000406, "Copy text to the clipboard."
 302535920000313, "OnMsg/Msg blacklist"
@@ -1655,12 +1655,11 @@ Not noticeable unless using higher zoom."
 302535920000990, "You need to have a mouse to use this mod."
 302535920000887, "If you get a disabled content restrictions error: It's on Paradox to review/restore it (bug them not me).
 
-If you have any issues with this mod please send me a bug report instead of reporting the mod.
-You can contact me through:
-Github: https://github.com/ChoGGi/SurvivingMars_CheatMods
-Discord: https://discord.gg/bkdjEZU
-Steam: https://steamcommunity.com/id/ChoGGi/
-email: SurvivingMarsMods@choggi.org"
+If you have any issues with this mod then please send me a bug report instead of reporting the mod.
+https://github.com/ChoGGi/SurvivingMars_CheatMods
+https://discord.gg/bkdjEZU
+https://steamcommunity.com/id/ChoGGi/
+SurvivingMarsMods@choggi.org"
 302535920000221, "See log for any batch errors."
 302535920001572, "<color ChoGGi_red>Pack Warning</color>: Will instantly crash SM when calling it a second time, pack the mod manually to workaround it.
 You can also stick the executable in the profile folder to use it instead (<green>no crashing</green>):
