--- a/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
+++ b/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
@@ -1,3 +1,6 @@
+v0.6
+Added challenge rating.
+
 v0.5
 Tito again (cold areas changed a bit).
 Mod options added: Unbreakable Cables/Pipes, and Give Subsurface Heaters.
